--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,18 @@ body {
     text-wrap: balance;
   }
 }
+
+.cs-mansory-image-hover{
+  break-inside: avoid-column;
+}
+
+.cs-mansory-image-hover > div {
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.342);
+}
+
+.cs-mansory-image-hover:hover div,
+.cs-mansory-image-hover:hover div > * {
+  opacity: 1;
+}
